# imr-checkin

./: .gitignore  README.md
backend/: README.md  e2e-test.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/integrations/: graph_client.py  hubspot_client.py
backend/app/models/: __init__.py  audit_event.py  consent_event.py  host.py  integration_job.py  visit.py  visitor.py
backend/app/routes/: admin.py  checkin.py  hosts.py  visitors.py  visits.py
backend/app/services/: audit.py  hubspot.py  notify.py  phone.py  schemas.py  visit_service.py  visitor_service.py
backend/app/workers/: arq_settings.py  directory_sync.py  hubspot.py  notify.py  retention.py
backend/tests/: conftest.py  test_checkin_flow.py  test_hubspot_client.py  test_hubspot_live.py
backend/tests/workers/: conftest.py  test_hubspot.py
docs/: deployment-plan-imr-test.md  deployment.md  hubspot-integration-plan.md  plan-ipad-local-kiosk.md  plan.md  privacy.md  running-both-frontends.md  test-plan.md  user-requirements.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend-ipad/: README.md  next.config.mjs  package-lock.json  package.json
frontend-ipad/app/: globals.css  layout.tsx  page.tsx
frontend-ipad/app/admin/: page.tsx
frontend-ipad/app/checkin/: page.tsx
frontend-ipad/app/components/: ConfirmationStep.tsx  DetailsStep.tsx  (+3 more)
frontend/app/: globals.css  layout.tsx  page.tsx
(+9 files in other folders)
